--- a/src/content/pages/Gallery.html
+++ b/src/content/pages/Gallery.html
@@ -1,11 +1,11 @@
 ---
-title: 'Gallery'
-description: 'Explore the captivating moments captured by Snap N Sweet's 360 photobooth. Immerse yourself in a gallery of memories, laughter, and shared experiences. Discover the magic of our cutting-edge technology and personalized setups through our curated collection of photos and videos. Relive the joy with Snap N Sweet.'
-preloadImg: '/assets//assets/images/Videos/cabinets2.jpg'
-permalink: 'Gallery/'
+title: '360 Photobooth Gallery'
+description: "Dive into the world of event entertainment and photography with Snap N Sweet's blog. Discover expert insights, creative ideas, and tips for making your events truly unforgettable. Explore articles that celebrate the art of capturing moments, technology trends, and unique event experiences. Learn, inspire, and create with Snap N Sweet's blog."
+preloadImg: '/assets/images/Hero.jpeg'
+permalink: '/Gallery'
 eleventyNavigation:
-    key: Gallery
-    order: 400
+  key: Gallery
+  order: 200
 ---
 
 {% extends "layouts/base.html" %}
@@ -29,69 +29,69 @@ eleventyNavigation:
         <div class="cs-gallery">
              <!--Picture 1-->
            <video controls class="cs-image" preload="metadata">
-                <source media="(max-width: 600px)" src="/assets/images/Videos/video (10).mp4#t=0.2">
+                <source media="(max-width: 600px)" src="https://snapnsweet.nyc3.cdn.digitaloceanspaces.com/video%20(10).mp4.mp4#t=0.2">
                 <!--Tablet and above Image-->
-                <source media="(min-width: 601px)" src="/assets/images/Videos/video (10).mp4#t=0.2">
+                <source media="(min-width: 601px)" src="https://snapnsweet.nyc3.cdn.digitaloceanspaces.com/video%20(10).mp4#t=0.2">
             </video>
              <!--Picture 2-->
            <video controls class="cs-image" preload="metadata">
-                <source media="(max-width: 600px)" src="/assets/images/Videos/video (11).mp4#t=0.2">
+                <source media="(max-width: 600px)" src="https://snapnsweet.nyc3.cdn.digitaloceanspaces.com/video%20(11).mp4#t=0.2">
                 <!--Tablet and above Image-->
-                <source media="(min-width: 601px)" src="/assets/images/Videos/video (11).mp4#t=0.2">
+                <source media="(min-width: 601px)" src="https://snapnsweet.nyc3.cdn.digitaloceanspaces.com/video%20(11).mp4#t=0.2">
             </video>
              <!--Picture 3-->
            <video controls class="cs-image" preload="metadata">
-                <source media="(max-width: 600px)" src="/assets/images/Videos/video (12).mp4#t=0.2">
+                <source media="(max-width: 600px)" src="https://snapnsweet.nyc3.cdn.digitaloceanspaces.com/video%20(12).mp4#t=0.2">
                 <!--Tablet and above Image-->
-                <source media="(min-width: 601px)" src="/assets/images/Videos/video (12).mp4#t=0.2">
+                <source media="(min-width: 601px)" src="https://snapnsweet.nyc3.cdn.digitaloceanspaces.com/video%20(12).mp4#t=0.2">
             </video>
             <!--Picture 4-->
              <video controls class="cs-image" preload="metadata">
-                <source media="(max-width: 600px)" src="/assets/images/Videos/video (3).mp4#t=0.2">
+                <source media="(max-width: 600px)" src="https://snapnsweet.nyc3.cdn.digitaloceanspaces.com/video%20(3).mp4#t=0.2">
                 <!--Tablet and above Image-->
-                <source media="(min-width: 601px)" src="/assets/images/Videos/video (3).mp4#t=0.2">
+                <source media="(min-width: 601px)" src="https://snapnsweet.nyc3.cdn.digitaloceanspaces.com/video%20(3).mp4#t=0.2">
             </video>
             <!--Picture 5-->
           <video controls class="cs-image" preload="metadata">
-                <source media="(max-width: 600px)" src="/assets/images/Videos/video (6).mp4#t=0.2">
+                <source media="(max-width: 600px)" src="https://snapnsweet.nyc3.cdn.digitaloceanspaces.com/video%20(6).mp4#t=0.2">
                 <!--Tablet and above Image-->
-                <source media="(min-width: 601px)" src="/assets/images/Videos/video (3).mp4#t=0.2">
+                <source media="(min-width: 601px)" src="https://snapnsweet.nyc3.cdn.digitaloceanspaces.com/video%20(6).mp4#t=0.2">
             </video>
             <!--Picture 6-->
            <video controls class="cs-image" preload="metadata">
-                <source media="(max-width: 600px)" src="/assets/images/Videos/video (7).mp4#t=0.2">
+                <source media="(max-width: 600px)" src="https://snapnsweet.nyc3.cdn.digitaloceanspaces.com/video%20(7).mp4#t=0.2">
                 <!--Tablet and above Image-->
-                <source media="(min-width: 601px)" src="/assets/images/Videos/video (8).mp4#t=0.2">
+                <source media="(min-width: 601px)" src="https://snapnsweet.nyc3.cdn.digitaloceanspaces.com/video%20(7).mp4#t=0.2">
             </video>
             <!--Picture 7-->
          <video controls class="cs-image" preload="metadata">
-                <source media="(max-width: 600px)" src="/assets/images/Videos/video (9).mp4#t=0.2">
+                <source media="(max-width: 600px)" src="https://snapnsweet.nyc3.cdn.digitaloceanspaces.com/video%20(9).mp4#t=0.2">
                 <!--Tablet and above Image-->
-                <source media="(min-width: 601px)" src="/assets/images/Videos/video (3).mp4#t=0.2">
+                <source media="(min-width: 601px)" src="https://snapnsweet.nyc3.cdn.digitaloceanspaces.com/video%20(9).mp4#t=0.2">
             </video>
             <!--Picture 8-->
           <video controls class="cs-image" preload="metadata">
-                <source media="(max-width: 600px)" src="/assets/images/Videos/2023-05-27_203110651.mp4#t=0.2">
+                <source media="(max-width: 600px)" src="https://snapnsweet.nyc3.cdn.digitaloceanspaces.com/2023-05-27_203110651.mp4#t=0.2">
                 <!--Tablet and above Image-->
-                <source media="(min-width: 601px)" src="/assets/images/Videos/2023-05-27_203110651.mp4#t=0.2">
+                <source media="(min-width: 601px)" src="https://snapnsweet.nyc3.cdn.digitaloceanspaces.com/2023-05-27_203110651.mp4#t=0.2">
             </video>
              <!--Picture 9-->
           <video controls class="cs-image" preload="metadata">
-                <source media="(max-width: 600px)" src="/assets/images/Videos/2023-07-14_215028852.mp4#t=0.2">
+                <source media="(max-width: 600px)" src="https://snapnsweet.nyc3.cdn.digitaloceanspaces.com/2023-07-14_215028852.mp4#t=0.2">
                 <!--Tablet and above Image-->
-                <source media="(min-width: 601px)" src="/assets/images/Videos/2023-07-14_215028852.mp4#t=0.2">
+                <source media="(min-width: 601px)" src="https://snapnsweet.nyc3.cdn.digitaloceanspaces.com/2023-07-14_215028852.mp4#t=0.2">
             </video>
               <!--Picture 10-->
           <video controls class="cs-image"preload="metadata">
-                <source media="(max-width: 600px)" src="/assets/images/Videos/2023-04-29_143337888.mp4#t=0.2">
+                <source media="(max-width: 600px)" src="https://snapnsweet.nyc3.cdn.digitaloceanspaces.com/2023-04-29_143337888.mp4#t=0.2">
                 <!--Tablet and above Image-->
-                <source media="(min-width: 601px)" src="/assets/images/Videos/2023-04-29_143337888.mp4#t=0.2">
+                <source media="(min-width: 601px)" src="https://snapnsweet.nyc3.cdn.digitaloceanspaces.com/2023-04-29_143337888.mp4#t=0.2">
             </video>
               <!--Picture 11-->
           <video controls class="cs-image" preload="metadata">
-                <source media="(max-width: 600px)" src="/assets/images/Videos/2023-05-07_173426260.mp4#t=0.2">
+                <source media="(max-width: 600px)" src="https://snapnsweet.nyc3.cdn.digitaloceanspaces.com/2023-05-07_173426260.mp4#t=0.2">
                 <!--Tablet and above Image-->
-                <source media="(min-width: 601px)" src="/assets/images/Videos/2023-05-07_173426260.mp4#t=0.2">
+                <source media="(min-width: 601px)" src="https://snapnsweet.nyc3.cdn.digitaloceanspaces.com/2023-05-07_173426260.mp4#t=0.2">
             </video>
         </div>
     </div>
@@ -110,8 +110,8 @@ eleventyNavigation:
                 <h2 class="cs-title">Witness the 360 Photobooth Experience in Action!</h2>
             </div>
             <div class="cs-button-box">
-                <a href="booking.html" class="cs-button-solid">Book Now</a>
-                <a href="contact_us" class="cs-button-transparent">Contact Us</a>
+                <a href="/booking" class="cs-button-solid">Book Now</a>
+                <a href="/contact" class="cs-button-transparent">Contact Us</a>
             </div>
         </div>
     </div>
@@ -120,7 +120,7 @@ eleventyNavigation:
         <source media="(max-width: 600px)" srcset="/assets/images/Home/Hero.jpeg">
         <!--Tablet and above Image-->
         <source media="(min-width: 601px)" srcset="/assets/images/Home/Hero.jpeg">
-        <img loading="lazy" decoding="async" src="/assets/images/Home/Hero.jpeg" alt="mechanic" width="1280" height="568">
+        <img loading="lazy" decoding="async" src="/assets/images/Home/Hero.jpeg" alt="Photobooth Part" width="1280" height="568">
     </picture>
 </section>
 
