--- a/src/content/pages/Weddings.html
+++ b/src/content/pages/Weddings.html
@@ -1,15 +1,14 @@
 ---
-title: 'Weddings'
-description: 'Turn your wedding into an enchanting experience with Snap N Sweet's 360 photobooth services. Let us capture the love, joy, and cherished moments of your special day. Elevate your wedding celebration with our personalized setups and cutting-edge technology. Make memories last forever with Snap N Sweet.'
-preloadImg: '/assets/images/Depositphotos_221000152_XL.jpg'
-permalink: 'Weddings/'
+title: '360 Photobooth Weddings'
+description: "Turn your wedding into an enchanting experience with Snap N Sweet's 360 photobooth services. Let us capture the love, joy, and cherished moments of your special day. Elevate your wedding celebration with our personalized setups and cutting-edge technology. Make memories last forever with Snap N Sweet."
+preloadImg: '/assets/images/Services/wedding-gda4f05a1e_1280.jpg'
+permalink: '/Weddings'
 eleventyNavigation:
-    parent: Services
-    key: Weddings
-    order: 800
+  key: Corporate
+  order: 200
 ---
 
-{% extends "layouts/base.html" %}
+{% extends "layouts/base5.html" %}
 
 {% block head %}
     <link rel="stylesheet" href="/css/wedding.css">
@@ -25,8 +24,8 @@ eleventyNavigation:
     <div class="cs-container">
         <span class="cs-int-title">Weddings</span>
         <div class="cs-breadcrumbs">
-            <a href="index.html" class="cs-link">Home</a>
-            <a href="wedding.html" class="cs-link cs-active">Weddings</a>
+            <a href="/index" class="cs-link">Home</a>
+            <a href="/weddings" class="cs-link cs-active">Weddings</a>
         </div>
     </div>
     <!--Background Image-->
@@ -34,7 +33,7 @@ eleventyNavigation:
         <!--Mobile Image-->
         <source media="(max-width: 600px)" srcset="/assets/images/Services/wedding-gda4f05a1e_1280_s_m.jpg">
         <source media="(min-width: 601px)" srcset="/assets/images/Services/wedding-gda4f05a1e_1280_s.jpg">
-        <img decoding="async" src="/assets/images/Services/wedding-gda4f05a1e_1280.jpg" alt="mechanic" width="1280" height="568" aria-hidden="true">
+        <img decoding="async" src="/assets/images/Services/wedding-gda4f05a1e_1280.jpg" alt="Photobooth Wedding" width="1280" height="568" aria-hidden="true">
     </picture>
 </div>
 
@@ -51,7 +50,7 @@ eleventyNavigation:
                 <source media="(max-width: 600px)" srcset="/assets/images/Services/wedding_s_m.jpg">
                 <!--Tablet and above Image-->
                 <source media="(min-width: 601px)" srcset="/assets/images/Services/wedding_s_2.jpg">
-                <img loading="lazy" decoding="async" src="/assets/images/Services/wedding.jpeg" alt="mechanic" width="542" height="608">
+                <img loading="lazy" decoding="async" src="/assets/images/Services/wedding.jpeg" alt="Photobooth Wedding" width="542" height="608">
             </picture>
             <!--Eclipses-->
          
@@ -88,7 +87,7 @@ eleventyNavigation:
             <source media="(max-width: 600px)" srcset="/assets/images/Home/Picture20.png">
             <!--Tablet and above Image-->
             <source media="(min-width: 601px)" srcset="/assets/images/Home/Picture20.png">
-            <img loading="lazy" decoding="async" src="/assets/images/Home/Picture20.png" alt="room" width="494" height="700">
+            <img loading="lazy" decoding="async" src="/assets/images/Home/Picture20.png" alt="Photobooth Fun" width="494" height="700">
         </picture>
         <div class="cs-content">
             <span class="cs-topper">Why Us</span>
@@ -99,7 +98,7 @@ eleventyNavigation:
             <p class="cs-text">
                We offer flexible package options to accommodate weddings of all sizes and styles. Whether you're hosting an intimate gathering or a grand celebration, we have a package that fits your needs and budget. From a two-hour package to a full-day rental, our services are customizable to match your wedding schedule perfectly.
             </p>
-            <a href="contact_us" class="cs-button-solid">Get Free Quote</a>
+            <a href="/contact" class="cs-button-solid">Get Free Quote</a>
         </div>
     </div>
 </section>
@@ -117,14 +116,14 @@ eleventyNavigation:
             <p class="cs-text">
                 Let's make your wedding day even more special with the enchanting touch of our 360 photobooth
             </p>
-            <a href="booking.html" class="cs-button-solid">Book Your Photobooth</a>
+            <a href="/booking" class="cs-button-solid">Book Your Photobooth</a>
         </div>
     </div>
     <!-- Background Image-->
     <picture class="cs-picture">
         <source media="(max-width: 600px)" srcset="/assets/images/Services/Hero_s.jpg">
         <source media="(min-width: 601px)" srcset="/assets/images/Services/Hero_s.jpg">
-        <img loading="lazy" decoding="async" src="/assets/images/Services/Hero.jpeg" alt="cabinets" width="1920" height="1280" aria-hidden="true">
+        <img loading="lazy" decoding="async" src="/assets/images/Services/Hero.jpeg" alt="Photobooth Hero" width="1920" height="1280" aria-hidden="true">
     </picture>
 </section>
 
