--- a/src/content/pages/about.html
+++ b/src/content/pages/about.html
@@ -1,13 +1,12 @@
 ---
 title: 'About'
-description: 'Discover Toronto's premier 360 photobooth experience with Snap N Sweet. Immerse your guests in a world of memories, laughter, and shared moments. From cutting-edge technology to personalized setups, let us capture the essence of your event. Create, connect, and celebrate with Snap N Sweet!'
-preloadImg: '/assets/images/Depositphotos_221000152_XL.jpg'
-permalink: 'about/'
+description: "Discover Toronto's premier 360 photobooth experience with Snap N Sweet. Immerse your guests in a world of memories, laughter, and shared moments. From cutting-edge technology to personalized setups, let us capture the essence of your event. Create, connect, and celebrate with Snap N Sweet!"
+preloadImg: '/assets/images/About/Depositphotos_221000152_XL.jpg'
+permalink: '/about'
 eleventyNavigation:
-    key: About
-    order: 200
+  key: About
+  order: 200
 ---
-
 {% extends "layouts/base3.html" %}
 
 {% block head %}
@@ -23,8 +22,8 @@ eleventyNavigation:
     <div class="cs-container">
         <span class="cs-int-title">About</span>
         <div class="cs-breadcrumbs">
-            <a href="index.html" class="cs-link">Home</a>
-            <a href="about.html" class="cs-link cs-active">About</a>
+            <a href="/index" class="cs-link">Home</a>
+            <a href="/about" class="cs-link cs-active">About</a>
         </div>
     </div>
     <!--Background Image-->
@@ -49,7 +48,7 @@ eleventyNavigation:
                 <source media="(max-width: 600px)" srcset="/assets/images/About/Photobooth_a_m.jpg">
                 <!--Tablet and above Image-->
                 <source media="(min-width: 601px)" srcset="/assets/images/About/Photobooth_a.jpg">
-                <img loading="lazy" decoding="async" src="/assets/images/About/Photobooth.jpeg" alt="mechanic" width="542" height="608">
+                <img loading="lazy" decoding="async" src="/assets/images/About/Photobooth.jpeg" alt="Photobooth" width="542" height="608">
             </picture>
             <!--Eclipses-->
          
@@ -86,7 +85,7 @@ eleventyNavigation:
                 <source media="(max-width: 600px)" srcset="/assets/images/ImgBlog/360-Blog_a_m.jpg">
                 <!--Tablet and above Image-->
                 <source media="(min-width: 601px)" srcset="/assets/images/ImgBlog/360-Blog_a.jpg">
-                <img loading="lazy" decoding="async" src="/assets/images/ImgBlog/360-Blog.jpeg" alt="appliance" width="323" height="447">
+                <img loading="lazy" decoding="async" src="/assets/images/ImgBlog/360-Blog.jpeg" alt="360 Photobooth" width="323" height="447">
             </picture>
             <!--Bottom right image-->
             <picture class="cs-picture cs-picture2">
@@ -94,7 +93,7 @@ eleventyNavigation:
                 <source media="(max-width: 600px)" srcset="/assets/images/ImgBlog/corporate-blog_s.jpg">
                 <!--Tablet and above Image-->
                 <source media="(min-width: 601px)" srcset="/assets/images/ImgBlog/corporate-blog_s_m.jpg">
-                <img loading="lazy" decoding="async" src="/assets/images/ImgBlog/corporate-blog.jpg" alt="appliance" width="305" height="441">
+                <img loading="lazy" decoding="async" src="/assets/images/ImgBlog/corporate-blog.jpg" alt="Corporate Photobooth" width="305" height="441">
             </picture>
             <!--Stripe background-->
             <img class="cs-stripes" loading="lazy" decoding="async" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Icons/stripes-short.svg" alt="stripes" width="548" height="487" aria-hidden="true">
@@ -165,7 +164,7 @@ eleventyNavigation:
     <picture class="cs-background">
         <source media="(max-width: 600px)" srcset="/assets/images/ImgBlog/corporate-blog_a_m.jpg">
         <source media="(min-width: 601px)" srcset="/assets/images/ImgBlog/corporate-blog_a.jpg">
-        <img aria-hidden="true" loading="lazy" decoding="async" src="/assets/images/ImgBlog/corporate-blog.jpg" alt="mechanic" width="1920" height="283">
+        <img aria-hidden="true" loading="lazy" decoding="async" src="/assets/images/ImgBlog/corporate-blog.jpg" alt="Hero Photobooth" width="1920" height="283">
     </picture>
 </div>
           
@@ -184,7 +183,7 @@ eleventyNavigation:
             <p class="cs-text">
                Please note that the pricing for the Premium Package is customizable and will vary based on the specific requirements and duration of the event. For a personalized quote and to discuss how our Premium Package can elevate your event to the next level, kindly contact us. We look forward to creating an unforgettable photobooth experience tailored to your unique needs.
             </p>
-            <a href="contact_us.html" class="cs-button-solid">Contact Us</a>
+            <a href="/contact" class="cs-button-solid">Contact Us</a>
         </div>
         <ul class="cs-card-group">
             <li class="cs-item">
