--- a/src/content/pages/blog.html
+++ b/src/content/pages/blog.html
@@ -1,7 +1,7 @@
 ---
-title: 'Blog'
-description: 'Dive into the world of event entertainment and photography with Snap N Sweet's blog. Discover expert insights, creative ideas, and tips for making your events truly unforgettable. Explore articles that celebrate the art of capturing moments, technology trends, and unique event experiences. Learn, inspire, and create with Snap N Sweet's blog.'
-preloadImg: '/assets//assets/images/Videos/cabinets2.jpg'
+title: '360 Photobooth Blogs'
+description: "Dive into the world of event entertainment and photography with Snap N Sweet's blog. Discover expert insights, creative ideas, and tips for making your events truly unforgettable. Explore articles that celebrate the art of capturing moments, technology trends, and unique event experiences. Learn, inspire, and create with Snap N Sweet's blog."
+preloadImg: '/assets/images/cabinets2.jpg'
 permalink: 'blog/'
 eleventyNavigation:
     key: Blog
