--- a/src/index.html
+++ b/src/index.html
@@ -1,8 +1,8 @@
 ---
-title: '360 Photobooth'
+title: "Toronto's Premier 360 Photobooth Experience"
 description: 'Capture unforgettable moments with our Toronto 360 Photo Booth. Step into an immersive experience where every angle is captured, creating stunning 360-degree photos. Book now and make your event truly memorable.'
 preloadImg: '/assets/images/Hero.jpeg'
-permalink: '/'
+permalink: '/index'
 eleventyNavigation:
   key: Home
   order: 100
@@ -46,12 +46,12 @@ eleventyNavigation:
             <p class="cs-text">
                  Come Experiance Toronto's Premier PhotoBooth Experience. Last-Minute Bookings Available!
             </p>
-            <a href="booking.html" class="cs-button-solid">Confirm Your Spot</a>
+            <a href="/booking" class="cs-button-solid">Confirm Your Spot</a>
         </div>
         <ul class="cs-card-group">
             <li class="cs-item">
                 <picture class="cs-icon-wrapper">
-                    <img class="cs-icon" loading="lazy" decoding="async" src="/assets/images/Home/icons8-phone.svg" alt="car" width="48" height="48">
+                    <img class="cs-icon" loading="lazy" decoding="async" src="/assets/images/Home/icons8-phone.svg" alt="phone icon" width="48" height="48">
                 </picture>
                 <h3 class="cs-h3">Instant Reservation</h3>
                 <p class="cs-item-text">
@@ -60,7 +60,7 @@ eleventyNavigation:
             </li>
             <li class="cs-item">
                 <picture class="cs-icon-wrapper">
-                    <img class="cs-icon" loading="lazy" decoding="async" src="/assets/images/icons8-mobile-phone.svg" alt="car" width="48" height="48">
+                    <img class="cs-icon" loading="lazy" decoding="async" src="/assets/images/Home/icons8-mobile-phone.svg" alt="mobile icon" width="48" height="48">
                 </picture>
                 <h3 class="cs-h3">Digital Output</h3>
                 <p class="cs-item-text">
@@ -69,7 +69,7 @@ eleventyNavigation:
             </li>
             <li class="cs-item">
                 <picture class="cs-icon-wrapper">
-                    <img class="cs-icon" loading="lazy" decoding="async" src="/assets/images/icons8-customize.svg" alt="car" width="48" height="48">
+                    <img class="cs-icon" loading="lazy" decoding="async" src="/assets/images/Home/icons8-customize.svg" alt="customize icon" width="48" height="48">
                 </picture>
                 <h3 class="cs-h3">Customizable Backgrounds</h3>
                 <p class="cs-item-text">
@@ -99,7 +99,7 @@ eleventyNavigation:
             <p class="cs-text">
                 At Snap 'n Sweet, we pride ourselves on providing an exceptional 360 photobooth experience for all your events in Toronto and surrounding areas. Our mission is to create unforgettable memories and add a touch of magic to your special occasions, whether it's a corporate event, wedding, birthday party, or any other celebration.
             </p>
-            <a href="corporate.html" class="cs-button-solid">Our Services</a>
+            <a href="/corporate" class="cs-button-solid">Our Services</a>
         </div>
         <ul class="cs-card-group">
             <li class="cs-item">
@@ -107,7 +107,7 @@ eleventyNavigation:
                 <picture class="cs-picture">
                     <source media="(max-width: 600px)" srcset="/assets/images/Home/wedding-gda4f05a1e_1280_m.jpg">
                     <source media="(min-width: 601px)" srcset="/assets/images/Home/wedding-gda4f05a1e_1280_m1.jpg">
-                    <img aria-hidden="true" loading="lazy" decoding="async" src="/assets/images/Home/wedding-gda4f05a1e_1280_m1.jpg" alt="Weddings" width="275" height="132">
+                    <img aria-hidden="true" loading="lazy" decoding="async" src="/assets/images/Home/wedding-gda4f05a1e_1280_m1.jpg" alt="Photobooth Wedding" width="275" height="132">
                 </picture>
             </li>
             <li class="cs-item">
@@ -115,7 +115,7 @@ eleventyNavigation:
                 <picture class="cs-picture">
                     <source media="(max-width: 600px)" srcset="/assets/images/Home/Depositphotos_409465086_XL_m.jpg">
                     <source media="(min-width: 601px)" srcset="/assets/images/Home/Depositphotos_409465086_XL_m1.jpg">
-                    <img aria-hidden="true" loading="lazy" decoding="async" src="/assets/images/Home/Depositphotos_409465086_XL_m1.jpg" alt="Corporate" width="275" height="132">
+                    <img aria-hidden="true" loading="lazy" decoding="async" src="/assets/images/Home/Depositphotos_409465086_XL_m1.jpg" alt="Corporate Photobooth" width="275" height="132">
                 </picture>
             </li>
             <li class="cs-item">
@@ -123,7 +123,7 @@ eleventyNavigation:
                 <picture class="cs-picture">
                     <source media="(max-width: 600px)" srcset="/assets/images/Home/Depositphotos_221000152_XL_m.jpg">
                     <source media="(min-width: 601px)" srcset="/assets/images/Home/Depositphotos_221000152_XL_m1.jpg">
-                    <img aria-hidden="true" loading="lazy" decoding="async" src="/assets/images/Home/Depositphotos_221000152_XL_m1.jpg" alt="Parties" width="275" height="132">
+                    <img aria-hidden="true" loading="lazy" decoding="async" src="/assets/images/Home/Depositphotos_221000152_XL_m1.jpg" alt="Photobooth Party" width="275" height="132">
                 </picture>
             </li>
         </ul>
@@ -150,9 +150,9 @@ eleventyNavigation:
                 <img loading="lazy" decoding="async" src="/assets/images/Home/Picture21.png" alt="Nightime Party" width="345" height="345">
             </picture>
            <video controls class="cs-picture cs-picture2"  preload="metadata">
-                <source media="(max-width: 600px)" src="/assets/images/Videos/video (2).mp4#t=0.2">
+                <source media="(max-width: 600px)" src="https://snapnsweet.nyc3.cdn.digitaloceanspaces.com/video%20(2).mp4#t=0.2">
                 <!--Tablet and above Image-->
-                <source media="(min-width: 601px)" src="/assets/images/Videos/video (2).mp4#t=0.2">
+                <source media="(min-width: 601px)" src="https://snapnsweet.nyc3.cdn.digitaloceanspaces.com/video%20(2).mp4#t=0.2">
             </video>
             <picture class="cs-picture cs-picture3">
                 <!--Mobile Image-->
@@ -162,9 +162,9 @@ eleventyNavigation:
                 <img loading="lazy" decoding="async" src="/assets/images/Home/Photobooth.jpeg" alt="Photobooth" width="345" height="345">
             </picture>
              <video controls class="cs-picture cs-picture4"  preload="metadata">
-                <source media="(max-width: 600px)" src="/assets/images/Videos/video (5).mp4#t=0.2">
+                <source media="(max-width: 600px)" src="https://snapnsweet.nyc3.cdn.digitaloceanspaces.com/video%20(5).mp4#t=0.2">
                 <!--Tablet and above Image-->
-                <source media="(min-width: 601px)" src="/assets/images/Videos/video (5).mp4#t=0.2">
+                <source media="(min-width: 601px)" src="https://snapnsweet.nyc3.cdn.digitaloceanspaces.com/video%20(5).mp4#t=0.2">
             </video>
             <picture class="cs-picture cs-picture5">
                 <!--Mobile Image-->
@@ -181,9 +181,9 @@ eleventyNavigation:
                 <img loading="lazy" decoding="async" src="/assets/images/Home/Party.jpeg" alt="Girl Photobooth" width="345" height="345">
             </picture>
             <video controls class="cs-picture cs-picture7"  preload="metadata">
-                <source media="(max-width: 600px)" src="/assets/images/Videos/video (4).mp4#t=0.2">
+                <source media="(max-width: 600px)" src="https://snapnsweet.nyc3.cdn.digitaloceanspaces.com/video%20(4).mp4#t=0.2">
                 <!--Tablet and above Image-->
-                <source media="(min-width: 601px)" src="/assets/images/Videos/video (4).mp4#t=0.2" width="345" height="345">
+                <source media="(min-width: 601px)" src="https://snapnsweet.nyc3.cdn.digitaloceanspaces.com/video%20(4).mp4#t=0.2" width="345" height="345">
             </video>
     <picture class="cs-picture cs-picture8">
                 <!--Mobile Image-->
@@ -246,7 +246,7 @@ eleventyNavigation:
             <p class="cs-text">
                One of the best highlights to a party! Everyone loved the 360 booth and the owners are some of the friendliest people you will ever meet. Thanks again for such a great time!
             </p>
-            <a href="contact_us.html" class="cs-button-solid">Contact Us</a>
+            <a href="/contact" class="cs-button-solid">Contact Us</a>
         </div>
         <ul class="cs-card-group">
             <li class="cs-item">
@@ -360,14 +360,14 @@ eleventyNavigation:
             <p class="cs-text">
                 Are you ready to create unforgettable memories at your upcoming event? Look no further! Schedule Your Event Experience with us Today.
             </p>
-            <a href="booking.html" class="cs-button-solid">Book Your Photobooth</a>
+            <a href="/booking" class="cs-button-solid">Book Your Photobooth</a>
         </div>
     </div>
     <!-- Background Image-->
     <picture class="cs-picture">
         <source media="(max-width: 600px)" srcset="/assets/images/Home/Hero_m2.jpg">
         <source media="(min-width: 601px)" srcset="/assets/images/Home/Hero_s.jpg">
-        <img loading="lazy" decoding="async" src="/assets/images/Home/Hero.jpeg" alt="cabinets" width="1920" height="1280" aria-hidden="true">
+        <img loading="lazy" decoding="async" src="/assets/images/Home/Hero.jpeg" alt="Photobooth Party" width="1920" height="1280" aria-hidden="true">
     </picture>
 </section>
 
@@ -397,7 +397,7 @@ eleventyNavigation:
                     <p class="cs-item-text">
                         In the ever-evolving landscape of corporate events, engaging and interactive experiences have become paramount to leave a lasting impression on attendees
                     </p>
-                    <a href="blog.html" class="cs-link">
+                    <a href="/blog/elevating-corporate-events-with-interactive-branding" class="cs-link">
                         Read More
                         <img class="cs-icon" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Icons%2Forange-carrot-right.svg" alt="arrow right" width="20" height="20" loading="lazy" decoding="async" aria-hidden="true">
                     </a>
@@ -417,7 +417,7 @@ eleventyNavigation:
                     <p class="cs-item-text">
                        While traditional photo booths have been a staple at gatherings, a new trend is taking the spotlight – the 360 photo booth. 
                     </p>
-                    <a href="blog.html" class="cs-link">
+                    <a href="blog/exploring-the-magic-of-a-360-photo-booth" class="cs-link">
                         Read More
                         <img class="cs-icon" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Icons%2Forange-carrot-right.svg" alt="arrow right" width="20" height="20" loading="lazy" decoding="async" aria-hidden="true">
                     </a>
@@ -437,7 +437,7 @@ eleventyNavigation:
                     <p class="cs-item-text">
                         Let's explore how bringing a 360 photo booth to your Toronto event can add an extra dimension of fun and engagement, making it an unforgettable experience for all.
                     </p>
-                    <a href="blog.html" class="cs-link">
+                    <a href="blog/bringing-your-toronto-event-to-life-with-a-360-photo-booth-rental" class="cs-link">
                         Read More
                         <img class="cs-icon" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Icons%2Forange-carrot-right.svg" alt="arrow right" width="20" height="20" loading="lazy" decoding="async" aria-hidden="true">
                     </a>
@@ -457,14 +457,14 @@ eleventyNavigation:
                     <p class="cs-item-text">
                          From brand exposure and lead generation to social media reach, photobooth marketing unleashes the full potential of experiential marketing.
                     </p>
-                    <a href="blog.html" class="cs-link">
+                    <a href="blog/unleashing-the-power-of-photobooth-marketing" class="cs-link">
                         Read More
                         <img class="cs-icon" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Icons%2Forange-carrot-right.svg" alt="arrow right" width="20" height="20" loading="lazy" decoding="async" aria-hidden="true">
                     </a>
                 </div>
             </li>
         </ul>
-        <a href="blog.html" class="cs-button-solid">Our Blogs</a>
+        <a href="/blog" class="cs-button-solid">Our Blogs</a>
     </div>
 </section>
     
