--- a/src/content/pages/Corporate.html
+++ b/src/content/pages/Corporate.html
@@ -1,15 +1,14 @@
 ---
-title: 'Corporate Events'
-description: 'Elevate your corporate events with Snap N Sweet's premier 360 photobooth services. Engage your team and clients in a world of interactive memories, cutting-edge technology, and personalized setups. Make your corporate gatherings unforgettable with Snap N Sweet.'
-preloadImg: '/assets/images/cabinets2.jpg'
-permalink: 'Corporate/'
+title: 'Corporate Event 360 Photobooth Services'
+description: "Discover Toronto's premier 360 photobooth experience with Snap N Sweet. Immerse your guests in a world of memories, laughter, and shared moments. From cutting-edge technology to personalized setups, let us capture the essence of your event. Create, connect, and celebrate with Snap N Sweet!"
+preloadImg: '/assets/images/Services/wedding-gda4f05a1e_1280.jpg'
+permalink: '/Corporate'
 eleventyNavigation:
-    parent: Services
-    key: Corporate Activites
-    order: 700
+  key: Corporate
+  order: 200
 ---
 
-{% extends "layouts/base.html" %}
+{% extends "layouts/base5.html" %}
 
 {% block head %}
     <link rel="stylesheet" href="/css/corporate.css">
@@ -24,8 +23,8 @@ eleventyNavigation:
     <div class="cs-container">
         <span class="cs-int-title">Corporate</span>
         <div class="cs-breadcrumbs">
-            <a href="index.html" class="cs-link">Home</a>
-            <a href="corporate.html" class="cs-link cs-active">Corporate</a>
+            <a href="/index" class="cs-link">Home</a>
+            <a href="/corporate" class="cs-link cs-active">Corporate</a>
         </div>
     </div>
     <!--Background Image-->
@@ -50,7 +49,7 @@ eleventyNavigation:
                 <source media="(max-width: 600px)" srcset="/assets/images/Services/wedding_s_m.jpg">
                 <!--Tablet and above Image-->
                 <source media="(min-width: 601px)" srcset="/assets/images/Services/wedding_s_2.jpg">
-                <img loading="lazy" decoding="async" src="/assets/images/Services/wedding_s_m.jpeg" alt="mechanic" width="542" height="608">
+                <img loading="lazy" decoding="async" src="/assets/images/Services/wedding_s_m.jpeg" alt="Photobooth Wedding" width="542" height="608">
             </picture>
             <!--Eclipses-->
          
@@ -87,7 +86,7 @@ eleventyNavigation:
             <source media="(max-width: 600px)" srcset="/assets/images/Home/Picture20.png">
             <!--Tablet and above Image-->
             <source media="(min-width: 601px)" srcset="/assets/images/Home/Picture20.png">
-            <img loading="lazy" decoding="async" src="/assets/images/Home/Picture20.png" alt="room" width="494" height="700">
+            <img loading="lazy" decoding="async" src="/assets/images/Home/Picture20.png" alt="Photobooth Fun" width="494" height="700">
         </picture>
         <div class="cs-content">
             <span class="cs-topper">Why Us</span>
@@ -98,7 +97,7 @@ eleventyNavigation:
             <p class="cs-text">
                We offer flexible package options to accommodate weddings of all sizes and styles. Whether you're hosting an intimate gathering or a grand celebration, we have a package that fits your needs and budget. From a two-hour package to a full-day rental, our services are customizable to match your wedding schedule perfectly.
             </p>
-            <a href="contact_us.html" class="cs-button-solid">Get Free Quote</a>
+            <a href="/contact" class="cs-button-solid">Get Free Quote</a>
         </div>
     </div>
 </section>
@@ -116,14 +115,14 @@ eleventyNavigation:
             <p class="cs-text">
                 Enhance your corporate event and elevate your brand presence with our 360 Photobooth. 
             </p>
-            <a href="booking.html" class="cs-button-solid">Book Your Photobooth</a>
+            <a href="/booking" class="cs-button-solid">Book Your Photobooth</a>
         </div>
     </div>
     <!-- Background Image-->
     <picture class="cs-picture">
         <source media="(max-width: 600px)" srcset="/assets/images/Services/Hero_s.jpg">
         <source media="(min-width: 601px)" srcset="/assets/images/Services/Hero_s.jpg">
-        <img loading="lazy" decoding="async" src="/assets/images/Services/Hero.jpeg" alt="cabinets" width="1920" height="1280" aria-hidden="true">
+        <img loading="lazy" decoding="async" src="/assets/images/Services/Hero.jpeg" alt="Photobooth Hero" width="1920" height="1280" aria-hidden="true">
     </picture>
 </section>
 
