--- a/src/content/pages/Social.html
+++ b/src/content/pages/Social.html
@@ -1,15 +1,14 @@
 ---
-title: 'Social Events'
-description: 'Add a touch of magic to your parties with Snap N Sweet's 360 photobooth services. Capture the energy, laughter, and fun of your celebrations with our immersive experience. Elevate your party atmosphere with our personalized setups and state-of-the-art technology. Make your parties unforgettable with Snap N Sweet.'
-preloadImg: '/assets/images/cabinets2.jpg'
-permalink: 'Social/'
+title: '360 Photobooth for Parties'
+description: "Add a touch of magic to your parties with Snap N Sweet's 360 photobooth services. Capture the energy, laughter, and fun of your celebrations with our immersive experience. Elevate your party atmosphere with our personalized setups and state-of-the-art technology. Make your parties unforgettable with Snap N Sweet."
+preloadImg: '/assets/images/Services/wedding-gda4f05a1e_1280.jpg'
+permalink: '/Social'
 eleventyNavigation:
-    parent: Services
-    key: Social Events
-    order: 800
+  key: Corporate
+  order: 200
 ---
 
-{% extends "layouts/base.html" %}
+{% extends "layouts/base5.html" %}
 
 {% block head %}
     <link rel="stylesheet" href="/css/social.css">
@@ -25,8 +24,8 @@ eleventyNavigation:
     <div class="cs-container">
         <span class="cs-int-title">Parties</span>
         <div class="cs-breadcrumbs">
-            <a href="index.html" class="cs-link">Home</a>
-            <a href="social.html" class="cs-link cs-active">Social Events</a>
+            <a href="/index" class="cs-link">Home</a>
+            <a href="/social" class="cs-link cs-active">Social Events</a>
         </div>
     </div>
     <!--Background Image-->
@@ -34,7 +33,7 @@ eleventyNavigation:
         <!--Mobile Image-->
         <source media="(max-width: 600px)" srcset="/assets/images/Services/wedding-gda4f05a1e_1280_s_m.jpg">
         <source media="(min-width: 601px)" srcset="/assets/images/Services/wedding-gda4f05a1e_1280_s.jpg">
-        <img decoding="async" src="/assets/images/Services/wedding-gda4f05a1e_1280.jpg" alt="mechanic" width="1280" height="568" aria-hidden="true">
+        <img decoding="async" src="/assets/images/Services/wedding-gda4f05a1e_1280.jpg" alt="Wedding Photobooth" width="1280" height="568" aria-hidden="true">
     </picture>
 </div>
 
@@ -48,10 +47,10 @@ eleventyNavigation:
             <!--Top left image-->
             <picture class="cs-picture">
                 <!--Mobile Image-->
-                <source media="(max-width: 600px)" srcset="/assets/images/Party_s_m.jpg">
+                <source media="(max-width: 600px)" srcset="/assets/images/Services/Party_s_m.jpg">
                 <!--Tablet and above Image-->
-                <source media="(min-width: 601px)" srcset="/assets/images/Party_s.jpg">
-                <img loading="lazy" decoding="async" src="/assets/images/Party.jpeg" alt="mechanic" width="542" height="608">
+                <source media="(min-width: 601px)" srcset="/assets/images/Services/Party_s.jpg">
+                <img loading="lazy" decoding="async" src="/assets/images/Services/Party.jpeg" alt="Party Photobooth" width="542" height="608">
             </picture>
             <!--Eclipses-->
          
@@ -88,7 +87,7 @@ eleventyNavigation:
             <source media="(max-width: 600px)" srcset="/assets/images/Services/wedding_s_m.jpg">
             <!--Tablet and above Image-->
             <source media="(min-width: 601px)" srcset="/assets/images/Services/wedding_s_2.jpg">
-            <img loading="lazy" decoding="async" src="/assets/images/Services/wedding.jpeg" alt="room" width="494" height="700">
+            <img loading="lazy" decoding="async" src="/assets/images/Services/wedding.jpeg" alt="Wedding Photobooth" width="494" height="700">
         </picture>
         <div class="cs-content">
             <span class="cs-topper">Why Us</span>
@@ -99,7 +98,7 @@ eleventyNavigation:
             <p class="cs-text">
               Make your social event uniquely yours by customizing the photobooth experience to match your theme and style. From a selection of backgrounds, props, and frames, your photos will tell a story that's true to your vision.
             </p>
-            <a href="contact_us.html" class="cs-button-solid">Get Free Quote</a>
+            <a href="/contact" class="cs-button-solid">Get Free Quote</a>
         </div>
     </div>
 </section>
@@ -117,14 +116,14 @@ eleventyNavigation:
             <p class="cs-text">
                Experience an unforgettable social event filled with creativity, laughter, and cherished memories with our 360 photobooth.
             </p>
-            <a href="booking.html" class="cs-button-solid">Book Your Photobooth</a>
+            <a href="/booking" class="cs-button-solid">Book Your Photobooth</a>
         </div>
     </div>
     <!-- Background Image-->
     <picture class="cs-picture">
         <source media="(max-width: 600px)" srcset="/assets/images/Services/Hero_s.jpg">
         <source media="(min-width: 601px)" srcset="/assets/images/Services/Hero_s.jpg">
-        <img loading="lazy" decoding="async" src="/assets/images/Services/Hero.jpeg" alt="cabinets" width="1920" height="1280" aria-hidden="true">
+        <img loading="lazy" decoding="async" src="/assets/images/Services/Hero.jpeg" alt="Photobooth Hero" width="1920" height="1280" aria-hidden="true">
     </picture>
 </section>
 
