--- a/src/content/pages/Booking.html
+++ b/src/content/pages/Booking.html
@@ -1,6 +1,6 @@
 ---
 title: 'Book Your 360 Photobooth Experience '
-description: "Ready to bring the magic of Snap N Sweet to your event? Book our 360 photobooth services and transform your occasion into an unforgettable experience. Secure your date, choose personalized setups, and immerse your guests in a world of memories and joy. Start your journey to an extraordinary event with Snap N Sweet's easy booking process."
+description: "Ready to bring the magic of Snap N Sweet to your event. Book our 360 photobooth services and transform your occasion into an unforgettable experience. Secure your date, choose personalized setups, and immerse your guests in a world of memories and joy. Start your journey to an extraordinary event with Snap N Sweet's easy booking process."
 preloadImg: '/assets/images/Hero.jpeg'
 permalink: '/Booking'
 eleventyNavigation:
