--- a/src/content/pages/Booking.html
+++ b/src/content/pages/Booking.html
@@ -1,7 +1,7 @@
 ---
-title: 'Book Your 360 Photobooth Experience '
-description: "Ready to bring the magic of Snap N Sweet to your event. Book our 360 photobooth services and transform your occasion into an unforgettable experience. Secure your date, choose personalized setups, and immerse your guests in a world of memories and joy. Start your journey to an extraordinary event with Snap N Sweet's easy booking process."
-preloadImg: '/assets/images/Hero.jpeg'
+title: 'Booking'
+description: "Turn your wedding into an enchanting experience with Snap N Sweet's 360 photobooth services. Let us capture the love, joy, and cherished moments of your special day. Elevate your wedding celebration with our personalized setups and cutting-edge technology. Make memories last forever with Snap N Sweet."
+preloadImg: '/assets/images/Services/wedding-gda4f05a1e_1280.jpg'
 permalink: '/Booking'
 eleventyNavigation:
   key: Booking
