--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 title: "Toronto's Premier 360 Photobooth Experience"
 description: 'Capture unforgettable moments with our Toronto 360 Photo Booth. Step into an immersive experience where every angle is captured, creating stunning 360-degree photos. Book now and make your event truly memorable.'
 preloadImg: '/assets/images/Hero.jpeg'
-permalink: '/index'
+permalink: '/'
 eleventyNavigation:
   key: Home
   order: 100
