--- a/src/content/pages/about.html
+++ b/src/content/pages/about.html
@@ -2,7 +2,7 @@
 title: 'About'
 description: "Discover Toronto's premier 360 photobooth experience with Snap N Sweet. Immerse your guests in a world of memories, laughter, and shared moments. From cutting-edge technology to personalized setups, let us capture the essence of your event. Create, connect, and celebrate with Snap N Sweet!"
 preloadImg: '/assets/images/About/Depositphotos_221000152_XL.jpg'
-permalink: '/about'
+permalink: 'about/'
 eleventyNavigation:
   key: About
   order: 200
