--- a/src/content/pages/about.html
+++ b/src/content/pages/about.html
@@ -22,8 +22,8 @@ eleventyNavigation:
     <div class="cs-container">
         <span class="cs-int-title">About</span>
         <div class="cs-breadcrumbs">
-            <a href="/index" class="cs-link">Home</a>
-            <a href="/about" class="cs-link cs-active">About</a>
+            <a href="index/" class="cs-link">Home</a>
+            <a href="about/" class="cs-link cs-active">About</a>
         </div>
     </div>
     <!--Background Image-->
@@ -183,7 +183,7 @@ eleventyNavigation:
             <p class="cs-text">
                Please note that the pricing for the Premium Package is customizable and will vary based on the specific requirements and duration of the event. For a personalized quote and to discuss how our Premium Package can elevate your event to the next level, kindly contact us. We look forward to creating an unforgettable photobooth experience tailored to your unique needs.
             </p>
-            <a href="/contact" class="cs-button-solid">Contact Us</a>
+            <a href="contact/" class="cs-button-solid">Contact Us</a>
         </div>
         <ul class="cs-card-group">
             <li class="cs-item">
