--- a/src/content/pages/Corporate.html
+++ b/src/content/pages/Corporate.html
@@ -2,7 +2,7 @@
 title: 'Corporate Event 360 Photobooth Services'
 description: "Discover Toronto's premier 360 photobooth experience with Snap N Sweet. Immerse your guests in a world of memories, laughter, and shared moments. From cutting-edge technology to personalized setups, let us capture the essence of your event. Create, connect, and celebrate with Snap N Sweet!"
 preloadImg: '/assets/images/Services/wedding-gda4f05a1e_1280.jpg'
-permalink: '/Corporate'
+permalink: 'Corporate/'
 eleventyNavigation:
   key: Corporate
   order: 200
@@ -23,8 +23,8 @@ eleventyNavigation:
     <div class="cs-container">
         <span class="cs-int-title">Corporate</span>
         <div class="cs-breadcrumbs">
-            <a href="/index" class="cs-link">Home</a>
-            <a href="/corporate" class="cs-link cs-active">Corporate</a>
+            <a href="index/" class="cs-link">Home</a>
+            <a href="corporate/" class="cs-link cs-active">Corporate</a>
         </div>
     </div>
     <!--Background Image-->
@@ -97,7 +97,7 @@ eleventyNavigation:
             <p class="cs-text">
                We offer flexible package options to accommodate weddings of all sizes and styles. Whether you're hosting an intimate gathering or a grand celebration, we have a package that fits your needs and budget. From a two-hour package to a full-day rental, our services are customizable to match your wedding schedule perfectly.
             </p>
-            <a href="/contact" class="cs-button-solid">Get Free Quote</a>
+            <a href="contact/" class="cs-button-solid">Get Free Quote</a>
         </div>
     </div>
 </section>
@@ -115,7 +115,7 @@ eleventyNavigation:
             <p class="cs-text">
                 Enhance your corporate event and elevate your brand presence with our 360 Photobooth. 
             </p>
-            <a href="/booking" class="cs-button-solid">Book Your Photobooth</a>
+            <a href="booking/" class="cs-button-solid">Book Your Photobooth</a>
         </div>
     </div>
     <!-- Background Image-->
