--- a/src/content/pages/Gallery.html
+++ b/src/content/pages/Gallery.html
@@ -2,7 +2,7 @@
 title: '360 Photobooth Gallery'
 description: "Dive into the world of event entertainment and photography with Snap N Sweet's blog. Discover expert insights, creative ideas, and tips for making your events truly unforgettable. Explore articles that celebrate the art of capturing moments, technology trends, and unique event experiences. Learn, inspire, and create with Snap N Sweet's blog."
 preloadImg: '/assets/images/Hero.jpeg'
-permalink: '/Gallery'
+permalink: 'Gallery/'
 eleventyNavigation:
   key: Gallery
   order: 200
@@ -110,8 +110,8 @@ eleventyNavigation:
                 <h2 class="cs-title">Witness the 360 Photobooth Experience in Action!</h2>
             </div>
             <div class="cs-button-box">
-                <a href="/booking" class="cs-button-solid">Book Now</a>
-                <a href="/contact" class="cs-button-transparent">Contact Us</a>
+                <a href="booking/" class="cs-button-solid">Book Now</a>
+                <a href="contact/" class="cs-button-transparent">Contact Us</a>
             </div>
         </div>
     </div>
