--- a/src/content/pages/Social.html
+++ b/src/content/pages/Social.html
@@ -2,7 +2,7 @@
 title: '360 Photobooth for Parties'
 description: "Add a touch of magic to your parties with Snap N Sweet's 360 photobooth services. Capture the energy, laughter, and fun of your celebrations with our immersive experience. Elevate your party atmosphere with our personalized setups and state-of-the-art technology. Make your parties unforgettable with Snap N Sweet."
 preloadImg: '/assets/images/Services/wedding-gda4f05a1e_1280.jpg'
-permalink: '/Social'
+permalink: 'Social/'
 eleventyNavigation:
   key: Corporate
   order: 200
@@ -24,8 +24,8 @@ eleventyNavigation:
     <div class="cs-container">
         <span class="cs-int-title">Parties</span>
         <div class="cs-breadcrumbs">
-            <a href="/index" class="cs-link">Home</a>
-            <a href="/social" class="cs-link cs-active">Social Events</a>
+            <a href="index/" class="cs-link">Home</a>
+            <a href="social/" class="cs-link cs-active">Social Events</a>
         </div>
     </div>
     <!--Background Image-->
@@ -98,7 +98,7 @@ eleventyNavigation:
             <p class="cs-text">
               Make your social event uniquely yours by customizing the photobooth experience to match your theme and style. From a selection of backgrounds, props, and frames, your photos will tell a story that's true to your vision.
             </p>
-            <a href="/contact" class="cs-button-solid">Get Free Quote</a>
+            <a href="contact/" class="cs-button-solid">Get Free Quote</a>
         </div>
     </div>
 </section>
@@ -116,7 +116,7 @@ eleventyNavigation:
             <p class="cs-text">
                Experience an unforgettable social event filled with creativity, laughter, and cherished memories with our 360 photobooth.
             </p>
-            <a href="/booking" class="cs-button-solid">Book Your Photobooth</a>
+            <a href="booking/" class="cs-button-solid">Book Your Photobooth</a>
         </div>
     </div>
     <!-- Background Image-->
