Hopefully Final Push

--- a/src/content/pages/Booking.html
+++ b/src/content/pages/Booking.html
@@ -2,10 +2,10 @@
 title: 'Booking'
 description: "Turn your wedding into an enchanting experience with Snap N Sweet's 360 photobooth services. Let us capture the love, joy, and cherished moments of your special day. Elevate your wedding celebration with our personalized setups and cutting-edge technology. Make memories last forever with Snap N Sweet."
 preloadImg: '/assets/images/Services/wedding-gda4f05a1e_1280.jpg'
-permalink: 'Booking/'
+permalink: '/Booking/'
 eleventyNavigation:
   key: Booking
-  order: 200
+  order: 800
 ---
 
 {% extends "layouts/base4.html" %}
