--- a/src/content/pages/Corporate.html
+++ b/src/content/pages/Corporate.html
@@ -2,10 +2,10 @@
 title: 'Corporate Event 360 Photobooth Services'
 description: "Discover Toronto's premier 360 photobooth experience with Snap N Sweet. Immerse your guests in a world of memories, laughter, and shared moments. From cutting-edge technology to personalized setups, let us capture the essence of your event. Create, connect, and celebrate with Snap N Sweet!"
 preloadImg: '/assets/images/Services/wedding-gda4f05a1e_1280.jpg'
-permalink: 'Corporate/'
+permalink: '/Corporate/'
 eleventyNavigation:
   key: Corporate
-  order: 200
+  order: 300
 ---
 
 {% extends "layouts/base5.html" %}
