--- a/src/content/pages/Social.html
+++ b/src/content/pages/Social.html
@@ -2,10 +2,10 @@
 title: '360 Photobooth for Parties'
 description: "Add a touch of magic to your parties with Snap N Sweet's 360 photobooth services. Capture the energy, laughter, and fun of your celebrations with our immersive experience. Elevate your party atmosphere with our personalized setups and state-of-the-art technology. Make your parties unforgettable with Snap N Sweet."
 preloadImg: '/assets/images/Services/wedding-gda4f05a1e_1280.jpg'
-permalink: 'Social/'
+permalink: '/Social/'
 eleventyNavigation:
   key: Corporate
-  order: 200
+  order: 400
 ---
 
 {% extends "layouts/base5.html" %}
