--- a/src/content/pages/Gallery.html
+++ b/src/content/pages/Gallery.html
@@ -2,7 +2,7 @@
 title: '360 Photobooth Gallery'
 description: "Dive into the world of event entertainment and photography with Snap N Sweet's blog. Discover expert insights, creative ideas, and tips for making your events truly unforgettable. Explore articles that celebrate the art of capturing moments, technology trends, and unique event experiences. Learn, inspire, and create with Snap N Sweet's blog."
 preloadImg: '/assets/images/Hero.jpeg'
-permalink: 'Gallery/'
+permalink: '/Gallery/'
 eleventyNavigation:
   key: Gallery
   order: 200
