--- a/src/content/pages/Weddings.html
+++ b/src/content/pages/Weddings.html
@@ -2,10 +2,10 @@
 title: '360 Photobooth Weddings'
 description: "Turn your wedding into an enchanting experience with Snap N Sweet's 360 photobooth services. Let us capture the love, joy, and cherished moments of your special day. Elevate your wedding celebration with our personalized setups and cutting-edge technology. Make memories last forever with Snap N Sweet."
 preloadImg: '/assets/images/Services/wedding-gda4f05a1e_1280.jpg'
-permalink: 'Weddings/'
+permalink: '/Weddings/'
 eleventyNavigation:
   key: Corporate
-  order: 200
+  order: 500
 ---
 
 {% extends "layouts/base5.html" %}
